# logic-simulator

./: CMakeLists.txt  README.md  test.bash
api/include/: template.h
api/include/Circuit/: Circuit.h  Element.h  Net.h
api/include/Parser/: Parser.h
api/include/Utils-STA/: DelayCalculator.h
api/share/: Makefile.template
examples/: circuit01.yal  circuit02.yal  circuit04.yal
exemplary-solution/: CIRCUIT01_out.txt  CIRCUIT02_out.txt  CIRCUIT03_out.txt  CIRCUIT04_out.txt  CIRCUIT05_out.txt  RCA_out.txt
implementation/: Doxyfile  main.cpp
implementation/Analysis-EDA/: AnalysisEDA.cpp  AnalysisEDA.h
